hecho la parte sql del ejercicio

--- a/PracticaMasterPage/web.config
+++ b/PracticaMasterPage/web.config
@@ -1,5 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
+  <connectionStrings>
+    <add name="ejerciciosConnectionString" connectionString="Data Source=DESKTOP-KK3SAOI;Initial Catalog=ejercicios;User ID=ejercicios;Password=Becario2020"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="Telerik.Skin" value="Bootstrap"/>
     <add key="Telerik.ScriptManager.TelerikCdn" value="Disabled"/>
