Commit tras añadir la página de login y el botón de cerrar sesión

--- a/PracticaMasterPage/web.config
+++ b/PracticaMasterPage/web.config
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <configuration>
+	
 	<connectionStrings>
 		<add name="ejerciciosConnectionString" connectionString="Data Source=DESKTOP-KK3SAOI;Initial Catalog=ejercicios;User ID=ejercicios;Password=Becario2020"
 		  providerName="System.Data.SqlClient" />
@@ -11,10 +12,23 @@
 		<add key="Telerik.StyleSheetManager.TelerikCdn" value="Disabled"/>
 		<add key="Telerik.Web.UI.RenderMode" value="lightweight"/>
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+		
 	</appSettings>
+	
 	<system.web>
 		<compilation debug="true" strict="true" explicit="true" targetFramework="4.7.2"/>
 		<httpRuntime targetFramework="4.7.2"/>
+		<authentication mode="Forms">
+			<forms name="seguridad" 
+				   loginUrl="~/login.aspx"
+				   protection="All" 
+				   timeout="20"
+				   path="\"/>
+		</authentication>
+		<authorization>
+			<deny users="?"/>
+			<allow users="*"/>
+		</authorization>
 		<pages>
 			<controls>
 				<add tagPrefix="telerik" namespace="Telerik.Web.UI" assembly="Telerik.Web.UI"/>
